--- a/remove_apache.yml
+++ b/remove_apache.yml
@@ -11,11 +11,11 @@
    - name:  install apache2 package
      apt:
        name: apache2
-       state: current
+       state: absent
 
    - name:   add php support for apache
      apt:
        name: libapache2-mod-php
-       state: current
+       state: absent
 
 
