--- a/install_apache.yml
+++ b/install_apache.yml
@@ -11,11 +11,11 @@
    - name:  install apache2 package
      apt:
        name: apache2
-       state: current
+       state: latest
 
    - name:   add php support for apache
      apt:
        name: libapache2-mod-php
-       state: current
+       state: latest
 
 
