--- a/install_apache.yml
+++ b/install_apache.yml
@@ -9,16 +9,14 @@
        update_cache: yes 
      when: ansible_distribution == "Ubuntu"
 
-   - name:  install apache2 package
+   - name:  install apache2 and  php packages
      apt:
-       name: apache2
+       name:
+         - apache2
+         - libapache2-mod-php
        state: latest
      when: ansible_distribution == "Ubuntu"
 
-   - name:   add php support for apache
-     apt:
-       name: libapache2-mod-php
-       state: latest
-     when: ansible_distribution == "Ubuntu"
+
 
 
