--- a/install_apache.yml
+++ b/install_apache.yml
@@ -4,17 +4,13 @@
    become: true
    tasks: 
   
-   - name:  update repository index
-     apt:
-       update_cache: yes 
-     when: ansible_distribution == "Ubuntu"
-
-   - name:  install apache2 and  php packages
+   - name:  Update cache, install apache2 and php packages
      apt:
        name:
          - apache2
          - libapache2-mod-php
        state: latest
+       update_cache: yes
      when: ansible_distribution == "Ubuntu"
 
 
